crates/poly-core/tests/snapshots/native_tool__dart_native_known_unformatted.snap
---
source: crates/poly-core/tests/native_tool.rs
expression: formatted
---
void main() {
  print('hello');
}
