crates/poly-core/tests/snapshots/native_tool__native_tool_disabled_go_tier2_output.snap
---
source: crates/poly-core/tests/native_tool.rs
expression: ts_out
---
package main
import "fmt"
func main() {
	fmt.Println("hi")
}
