crates/poly-core/tests/snapshots/native_tool__rust_native_known_unformatted.snap
---
source: crates/poly-core/tests/native_tool.rs
expression: formatted
---
fn main() {
    println!("hello");
    let x = 1 + 2;
}
