crates/poly-core/tests/snapshots/native_tool__swift_native_known_unformatted.snap
---
source: crates/poly-core/tests/native_tool.rs
expression: formatted
---
func greet(name: String) -> String {
  return "Hello, " + name
}
