crates/poly-core/tests/snapshots/native_tool__zig_native_known_unformatted.snap
---
source: crates/poly-core/tests/native_tool.rs
expression: formatted
---
const std = @import("std");
pub fn main() void {
    _ = std;
}
